--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
     = favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', rel: 'apple-touch-icon-precomposed', type: 'image/png', sizes: '72x72'
     = favicon_link_tag 'apple-touch-icon-precomposed.png', rel: 'apple-touch-icon-precomposed', type: 'image/png'
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
-    %link{:href => "http://fonts.googleapis.com/css?family=Abel", :rel => "stylesheet", :type => "text/css"}
+    %link{href: "http://fonts.googleapis.com/css?family=Abel", rel: "stylesheet", type: "text/css"}
 
   %body
     %nav.navbar.navbar-default{role: "navigation"}
@@ -66,13 +66,13 @@
         .pull-left.footer-menu
           .navbar-collapse.collapse
             %ul.nav.navbar-nav
-              %li 
+              %li
                 %a{href: "http://golumos.com"} home
-              %li 
+              %li
                 %a{href: "http://golumos.com/product.php"} product
-              %li 
+              %li
                 %a{href: "http://golumos.com/how-it-works.php"} how it works
-              %li 
+              %li
                 %a{href: "http://golumos.com/contact.php"} contact
-            
-              
+
+
