--- a/app/views/layouts/master/_navbar.html.haml
+++ b/app/views/layouts/master/_navbar.html.haml
@@ -33,19 +33,19 @@
             = link_to states_path do
               %span.glyphicon.glyphicon-globe
               States
-          %li
-            = link_to districts_path do
-              %span.glyphicon.glyphicon-fullscreen
-              Districts
-          %li
-            = link_to schools_path do
-              %span.glyphicon.glyphicon-bell
-              Schools
-          %li
-            = link_to teachers_path do
-              %span.glyphicon.glyphicon-briefcase
-              Teachers
-          %li.divider
+          -# %li
+          -#   = link_to districts_path do
+          -#     %span.glyphicon.glyphicon-fullscreen
+          -#     Districts
+          -# %li
+          -#   = link_to schools_path do
+          -#     %span.glyphicon.glyphicon-bell
+          -#     Schools
+          -# %li
+          -#   = link_to teachers_path do
+          -#     %span.glyphicon.glyphicon-briefcase
+          -#     Teachers
+          -# %li.divider
           %li
             = link_to products_path do
               %span.glyphicon.glyphicon-gift
