--- a/app/views/master/schools/_form.html.haml
+++ b/app/views/master/schools/_form.html.haml
@@ -1,10 +1,9 @@
-= simple_form_for(@school) do |f|
+= simple_form_for [@district, @school] do |f|
   = f.error_notification
 
   = f.input :name
-  = f.association :district, include_blank: false, collection: @school.new_record? ? District.ordered : @school.state.districts.ordered
 
   .form-group
     .col-sm-offset-2.col-sm-10
       = f.button :submit, class: 'btn btn-primary'
-      = link_to 'Cancel', schools_path, class: 'btn btn-link'
+      = link_to 'Cancel', @school.new_record? ? district_schools_path(@district) : district_school_path(@district, @school), class: 'btn btn-link'
